fix: fixed issue with navigation not showing

--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -1,5 +1,5 @@
 main .app {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 
