--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -1,12 +1,3 @@
-.profile-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: #F6E7D8;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
 .profile-left {
   flex: 1;
   display: flex;
@@ -110,6 +101,7 @@
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
+  
 }
 
 .update-section h2 {
